--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@ setTimeout(() => {
 </script>
 
 <!-- ⬇️ Replace with your Apps Script Web App URL -->
-<script src="https://script.google.com/macros/s/AKfycbzMiFMfZKJ7WG03EtFbea0F6c7K0VL3tn9k0Ez7MdB3zZPb0b2ivDjx4A6MxQaWx953ZQ/exec?callback=initGallery"></script>
-  
+<script src="https://script.google.com/macros/s/AKfycb.../exec?callback=initGallery"></script> 
 </body>
 </html>
 
