--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>🐾 Auto Google Drive Gallery</title>
+<meta name="viewport" content="width=device-width,initial-scale=2">
+<title>🐾 Purple Family Gallery</title>
 
 <!-- Lightbox2 (next/prev) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/css/lightbox.min.css">
